Added paganiation and filter to GetProducts + cors
